# autoxxx

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/adapter/: click_behavior.rs  input_device.rs  mod.rs  move_begavior.rs
src/common/: input_enums.rs  mod.rs
src/model/: mod.rs
src/model/enigo_devices/: keyboard.rs  mouse.rs
src/model/fnd_info/: mod.rs  parser.rs  skill_enum.rs
src/resources/fnd/: axl.json
src/views/: index.rs
